--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures { dataBinding = true }
 }
 
 dependencies {
@@ -37,5 +38,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "com.github.ipulian:ipusdk:1.6.2"
     implementation project(":open_service_x")
 }
