--- a/open_service_x/src/main/AndroidManifest.xml
+++ b/open_service_x/src/main/AndroidManifest.xml
@@ -3,13 +3,26 @@
     package="com.ipusoft.xlibrary">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
-    <application android:usesCleartextTraffic="true">
-        <activity android:name=".view.IpuWebViewActivity">
+    <application
+        android:name=".debug.MyApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="XSDK"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.DayNight"
+
+        android:usesCleartextTraffic="true">
+        <activity android:name="com.ipusoft.xlibrary.debug.MainActivity">
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-                <action android:name="com.ipusoft.xlibrary.IpuWebViewActivity" />
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.IpuWebViewActivity" />
     </application>
+
 </manifest>
