--- a/open_service_x/src/main/manifest/AndroidManifest.xml
+++ b/open_service_x/src/main/manifest/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application android:usesCleartextTraffic="true">
         <activity android:name="com.ipusoft.xlibrary.debug.MainActivity" />
-        <activity android:name=".view.IpuWebViewActivity" />
+        <activity android:name="com.ipusoft.context.view.IpuWebViewActivity" />
     </application>
 
 </manifest>
