--- a/open_service_x/build.gradle
+++ b/open_service_x/build.gradle
@@ -1,4 +1,4 @@
-def isApp = true
+def isApp = false
 
 if (isApp) {
     apply plugin: 'com.android.application'
@@ -68,7 +68,7 @@ dependencies {
     if (isApp) {
         implementation project(":context:context")
     } else {
-        implementation "com.github.ipulian:ipusdk:1.6.13.7"
+        implementation "com.github.ipulian:ipusdk:1.6.13.8"
     }
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
