--- a/open_service_x/build.gradle
+++ b/open_service_x/build.gradle
@@ -68,7 +68,8 @@ dependencies {
     if (isApp) {
         implementation project(":context:context")
     } else {
-        implementation "com.github.ipulian:ipusdk:1.6.13.8"
+        implementation "com.github.ipulian:ipusdk:1.6.15"
+        // implementation project(":context:context")
     }
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
