--- a/open_service_x/build.gradle
+++ b/open_service_x/build.gradle
@@ -13,6 +13,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.team.github@51lianlian.com'
 
+def signature = [
+        storeFile    : "/Users/gwfan/Desktop/my-release-key.keystore",
+        keyAlias     : "my-key-alias",
+        storePassword: "i*SOxs6SP\$X@jFeN",
+        keyPassword  : "i*SOxs6SP\$X@jFeN",
+]
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -39,6 +46,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    signingConfigs {
+        release {
+            storeFile file(signature.storeFile)
+            storePassword signature.storePassword
+            keyAlias signature.keyAlias
+            keyPassword signature.keyPassword
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -67,9 +84,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     if (isApp) {
         implementation project(":context:context")
+        // implementation "com.github.ipulian:ipusdk:1.6.15"
     } else {
-        implementation "com.github.ipulian:ipusdk:1.6.15"
-        // implementation project(":context:context")
+        implementation "com.github.ipulian:ipusdk:1.6.16"
+        //implementation project(":context:context")
     }
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
