--- a/open_service_x/build.gradle
+++ b/open_service_x/build.gradle
@@ -84,10 +84,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     if (isApp) {
         implementation project(":context:context")
-        // implementation "com.github.ipulian:ipusdk:1.6.15"
+        // implementation "com.github.ipulian:ipusdk:1.6.17"
     } else {
-        //implementation "com.github.ipulian:ipusdk:1.6.16"
-        implementation project(":context:context")
+        implementation "com.github.ipulian:ipusdk:1.6.17"
+        //implementation project(":context:context")
     }
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
