--- a/open_service_x/build.gradle
+++ b/open_service_x/build.gradle
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         if (isApp) {
-            applicationId "com.ipusoft.xlibrary"
+            applicationId "com.ipusoft.xphone"
         }
         minSdkVersion 21
         targetSdkVersion 30
@@ -84,10 +84,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     if (isApp) {
         implementation project(":context:context")
-        // implementation "com.github.ipulian:ipusdk:1.6.18"
+        //implementation "com.github.ipulian:ipusdk:1.6.20"
     } else {
-        implementation "com.github.ipulian:ipusdk:1.6.19"
-        //implementation project(":context:context")
+        implementation "com.github.ipulian:ipusdk:1.6.21"
+        // implementation project(":context:context")
     }
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
