--- a/open_service_x/src/main/AndroidManifest.xml
+++ b/open_service_x/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ipusoft.xlibrary">
+    package="com.ipusoft.xphone">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:name=".debug.MyApplication"
+        android:name="com.ipusoft.xphone.debug.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="XSDK"
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat.DayNight"
 
         android:usesCleartextTraffic="true">
-        <activity android:name="com.ipusoft.xlibrary.debug.MainActivity">
+        <activity android:name="com.ipusoft.xphone.debug.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
